<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer_main"
    app:startDestination="@id/Fragment_Emergencies">

    <!--
        Main Fragments residing in
        the main section of the drawer
    -->
    <fragment
        android:id="@+id/Fragment_Emergencies"
        android:name="com.th3pl4gu3.mes.main.emergencies.EmergenciesFragment"
        android:label="@string/menu_drawer_emergencies"
        tools:layout="@layout/fragment_emergencies" />

    <fragment
        android:id="@+id/Fragment_All_Services"
        android:name="com.th3pl4gu3.mes.main.all_services.AllServicesFragment"
        android:label="@string/menu_drawer_all_services"
        tools:layout="@layout/fragment_all_services" />

    <!--
        Sub category Fragments residing in
        the 'Others' section of the drawer
    -->
    <fragment
        android:id="@+id/Fragment_About"
        android:name="com.th3pl4gu3.mes.about.AboutFragment"
        android:label="@string/menu_drawer_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/Fragment_Settings"
        android:name="com.th3pl4gu3.mes.settings.SettingsFragment"
        android:label="@string/menu_drawer_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>